--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "notcoin-clicker",
-  "version": "0.1.0",
+  "name": "coinpanion-clicker",
+  "version": "0.0.1",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
