--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "@types/node": "^16.18.115",
     "classnames": "^2.5.1",
     "framer-motion": "^11.11.10",
+    "react-scripts": "^5.0.1",
+    "typescript": "^5.6.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
